# aigrc-python

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/aigrc/: __init__.py
src/aigrc/asset_card/: __init__.py  crud.py
src/aigrc/detection/: __init__.py  patterns.py  scanner.py  suggestions.py
src/aigrc/detection/frameworks/: __init__.py
src/aigrc/detection/strategies/: __init__.py
src/aigrc/golden_thread/: __init__.py  hash.py  verify.py
src/aigrc/schemas/: __init__.py  asset_card.py  jurisdiction.py  owner.py  risk_factors.py  technical.py
tests/: conftest.py  test_asset_card.py  test_detection.py  test_golden_thread.py  test_schemas.py
